[package]
name = "hot-complexity-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"
imageproc = "0.23.0"
ndarray = "0.15.6"
image = "0.24.5"
rand = "0.8.5"
wasm-bindgen = "0.2"
js-sys = "0.3.59"
console_error_panic_hook = "0.1.7"